--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@types/geojson": "^7946.0.0",
-    "@types/leaflet": "^1.2.4",
+    "@types/mapbox-gl": "^0.42.0",
     "core-js": "^2.4.1",
-    "leaflet": "^1.2.0",
+    "mapbox-gl": "^0.43.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
