--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --target=production --output-hashing none",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "netlify-deploy": "netlifyctl deploy --base-directory dist --name vanmap"
   },
   "private": true,
   "dependencies": {
