--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --ssl --ssl-key devKey.pem --ssl-cert devCert.pem",
+    "serve": "ng serve --ssl --ssl-key devKey.pem --ssl-cert devCert.pem",
     "build": "ng build --target=production --output-hashing none",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,7 +27,6 @@
     "@types/mapbox-gl": "^0.42.0",
     "core-js": "^2.4.1",
     "mapbox-gl": "^0.43.0",
-    "mapbox-gl-toggle-control": "^1.0.5",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
